intel/bench_214_new/extr_.stbtestsprereleasestb_lib.h_stb_from_utf8_with_main/log.txt
bench_214_new/extr_.stbtestsprereleasestb_lib.h_stb_from_utf8_with_main/extr_.stbtestsprereleasestb_lib.h_stb_from_utf8_with_main.c:24:17: error: use of undeclared identifier 'NULL'
         return NULL;
                ^
bench_214_new/extr_.stbtestsprereleasestb_lib.h_stb_from_utf8_with_main/extr_.stbtestsprereleasestb_lib.h_stb_from_utf8_with_main.c:28:34: error: use of undeclared identifier 'NULL'
         if (*str < 0xc2) return NULL;
                                 ^
bench_214_new/extr_.stbtestsprereleasestb_lib.h_stb_from_utf8_with_main/extr_.stbtestsprereleasestb_lib.h_stb_from_utf8_with_main.c:30:44: error: use of undeclared identifier 'NULL'
         if ((*str & 0xc0) != 0x80) return NULL;
                                           ^
bench_214_new/extr_.stbtestsprereleasestb_lib.h_stb_from_utf8_with_main/extr_.stbtestsprereleasestb_lib.h_stb_from_utf8_with_main.c:33:71: error: use of undeclared identifier 'NULL'
         if (*str == 0xe0 && (str[1] < 0xa0 || str[1] > 0xbf)) return NULL;
                                                                      ^
bench_214_new/extr_.stbtestsprereleasestb_lib.h_stb_from_utf8_with_main/extr_.stbtestsprereleasestb_lib.h_stb_from_utf8_with_main.c:34:52: error: use of undeclared identifier 'NULL'
         if (*str == 0xed && str[1] > 0x9f) return NULL; // str[1] < 0x80 is checked below
                                                   ^
bench_214_new/extr_.stbtestsprereleasestb_lib.h_stb_from_utf8_with_main/extr_.stbtestsprereleasestb_lib.h_stb_from_utf8_with_main.c:36:44: error: use of undeclared identifier 'NULL'
         if ((*str & 0xc0) != 0x80) return NULL;
                                           ^
bench_214_new/extr_.stbtestsprereleasestb_lib.h_stb_from_utf8_with_main/extr_.stbtestsprereleasestb_lib.h_stb_from_utf8_with_main.c:38:44: error: use of undeclared identifier 'NULL'
         if ((*str & 0xc0) != 0x80) return NULL;
                                           ^
bench_214_new/extr_.stbtestsprereleasestb_lib.h_stb_from_utf8_with_main/extr_.stbtestsprereleasestb_lib.h_stb_from_utf8_with_main.c:41:34: error: use of undeclared identifier 'NULL'
         if (*str > 0xf4) return NULL;
                                 ^
bench_214_new/extr_.stbtestsprereleasestb_lib.h_stb_from_utf8_with_main/extr_.stbtestsprereleasestb_lib.h_stb_from_utf8_with_main.c:42:71: error: use of undeclared identifier 'NULL'
         if (*str == 0xf0 && (str[1] < 0x90 || str[1] > 0xbf)) return NULL;
                                                                      ^
bench_214_new/extr_.stbtestsprereleasestb_lib.h_stb_from_utf8_with_main/extr_.stbtestsprereleasestb_lib.h_stb_from_utf8_with_main.c:43:52: error: use of undeclared identifier 'NULL'
         if (*str == 0xf4 && str[1] > 0x8f) return NULL; // str[1] < 0x80 is checked below
                                                   ^
bench_214_new/extr_.stbtestsprereleasestb_lib.h_stb_from_utf8_with_main/extr_.stbtestsprereleasestb_lib.h_stb_from_utf8_with_main.c:45:44: error: use of undeclared identifier 'NULL'
         if ((*str & 0xc0) != 0x80) return NULL;
                                           ^
bench_214_new/extr_.stbtestsprereleasestb_lib.h_stb_from_utf8_with_main/extr_.stbtestsprereleasestb_lib.h_stb_from_utf8_with_main.c:47:44: error: use of undeclared identifier 'NULL'
         if ((*str & 0xc0) != 0x80) return NULL;
                                           ^
bench_214_new/extr_.stbtestsprereleasestb_lib.h_stb_from_utf8_with_main/extr_.stbtestsprereleasestb_lib.h_stb_from_utf8_with_main.c:49:44: error: use of undeclared identifier 'NULL'
         if ((*str & 0xc0) != 0x80) return NULL;
                                           ^
bench_214_new/extr_.stbtestsprereleasestb_lib.h_stb_from_utf8_with_main/extr_.stbtestsprereleasestb_lib.h_stb_from_utf8_with_main.c:52:49: error: use of undeclared identifier 'NULL'
         if ((c & 0xFFFFF800) == 0xD800) return NULL;
                                                ^
bench_214_new/extr_.stbtestsprereleasestb_lib.h_stb_from_utf8_with_main/extr_.stbtestsprereleasestb_lib.h_stb_from_utf8_with_main.c:55:35: error: use of undeclared identifier 'NULL'
            if (i + 2 > n) return NULL;
                                  ^
bench_214_new/extr_.stbtestsprereleasestb_lib.h_stb_from_utf8_with_main/extr_.stbtestsprereleasestb_lib.h_stb_from_utf8_with_main.c:60:17: error: use of undeclared identifier 'NULL'
         return NULL;
                ^
16 errors generated.
HLS FPGA Parse FAILED.
